font, bg and core-pitch updation

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-:root {
-  --font-space-grotesk: 'Space Grotesk', ui-sans-serif, system-ui, sans-serif;
-}
-
-body {
-  font-family: var(--font-space-grotesk), "Apple Color Emoji", "Segoe UI Emoji", 
-               "Segoe UI Symbol", "Noto Color Emoji";
+  --background: #171717;
+  --foreground: #ffffff;
+  --font-space-grotesk: "Space Grotesk", ui-sans-serif, system-ui, sans-serif;
+  --font-sf-mono: "SF Mono", "SFMono-Regular", ui-monospace, Menlo, Consolas,
+    "Liberation Mono", monospace;
 }
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-mono: var(--font-sf-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,5 +24,13 @@ body {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sf-mono), "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+code,
+pre,
+kbd,
+samp {
+  font-family: var(--font-sf-mono);
 }
